# eta-aws-core

./: .gitignore  eta-aws-core.cabal
src/AWS/: Core.hs
src/AWS/Core/: Auth.hs  Event.hs  Handlers.hs  Http.hs  Metric.hs  Regions.hs  Retry.hs  Types.hs  Util.hs
