name:                eta-aws-core
version:             0.1.0.0
synopsis:            Eta bindings for Amazon AWS
license:             Apache-2.0
license-file:        LICENSE
author:              Jyothsna Srinivas
maintainer:          jyothsnasrinivas17@gmail.com
category:            Cloud
build-type:          Simple
cabal-version:       >=1.10


library
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     AWS.Core
                       AWS.Core.Types

  default-extensions:  TypeOperators
                       MagicHash
                       MultiParamTypeClasses
                       FlexibleContexts
                       RankNTypes
                       AllowAmbiguousTypes
                       ScopedTypeVariables
